--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "candles",
     "loguru>=0.7.3",
     "quixstreams>=3.13.1",
     "trades",
@@ -12,10 +13,11 @@ dependencies = [
 ]
 
 [tool.uv.workspace]
-members = ["services/trades"]
+members = ["services/trades", "services/candles"]
 
 [tool.uv.sources]
 trades = { workspace = true }
+candles = { workspace = true }
 
 [tool.ruff]
 line-length = 88
